Release 1.2 (in development)
============================

* #1110: Added a new configuration value :confval:`texinfo_no_detailmenu` for
  controlling whether the Texinfo writer generates a ``@detailmenu`` in the
  "Top" node's menu.

* The Texinfo writer now only generates detailed menus for the "Top" node.

* New locales: #1097: Added Basque locale.

* Fix text builder did not respect wide/fullwidth characters:
  title underline width, table layout width and text wrap width.

* Add stub for the :confval:`keep_warnings` configuration value in the
  ``conf.py`` generated by sphinx-quickstart.

* Speed up building the search index by caching the results of the word
  stemming routines.  Saves about 20 seconds when building the Python
  documentation.

* #1062: sphinx.ext.autodoc use __init__ method signature for class signature.

* PR#111: Respect add_autodoc_attrgetter() even when inherited-members is set.
  Thanks to A. Jesse Jiryu Davis.

* #1090: Fix gettext does not extract glossary terms.

* #1070: Avoid un-pickling issues when running Python 3 and the saved
  environment was created under Python 2.

* #1069: Fixed error caused when autodoc would try to format signatures of
  "partial" functions without keyword arguments (patch by Artur Gaspar).

* The :confval:`latex_documents`, :confval:`texinfo_documents`, and
  :confval:`man_pages` configuration values will be set to default values based
  on the :confval:`master_doc` if not explicitly set in :file:`conf.py`.
  Previously, if these values were not set, no output would be genereted by
  their respective builders.

* The :rst:dir:`toctree` directive and the ``toctree()`` template function now
  have an ``includehidden`` option that includes hidden toctree entries (bugs
  #790 and #1047). A bug in the ``maxdepth`` option for the ``toctree()``
  template function has been fixed (bug #1046).

* PR#99: Strip down seealso directives to normal admonitions.  This removes